--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    This is the Title!
+  </head>
+  
+  <body>
+    <p> This is the body paragraph.</p>
+  </body>
+</html>
